--- a/index.html
+++ b/index.html
@@ -76,10 +76,44 @@
             </div>
         </div>
         <div class="right-block right">
+            <div class="sugestion-header"><span class="main-word">trufel</span>this is ouer sugestions</div>
             <div class="sugestion">
-                <div class="green left"></div>
-                <div class="blue left"></div>
-                <div class="red left"></div>
+                <div class="green line">
+                    <span>shoffel</span><span>trufelffel</span><span>slaliliuuuush</span>
+                    <span>shoffel</span><span>slaliliuuuush</span><span>trufelffel</span>
+                    <span>shoffel</span><span>slaliliuuuush</span><span>trufelffel</span>
+                    <span>shoffel</span><span>trufelffel</span><span>slaliliuuuush</span>
+                    <span>shoffel</span><span>slaliliuuuush</span><span>trufelffel</span>
+                    <span>shoffel</span><span>trufelffel</span><span>slaliliuuuush</span>
+                    <span>shoffel</span><span>trufelffel</span><span>slaliliuuuush</span>
+                </div>
+                <div class="blue line">
+                    <span>shoffel</span><span>trufelffel</span><span>slaliliuuuush</span>
+                    <span>shoffel</span><span>slaliliuuuush</span><span>trufelffel</span>
+                    <span>shoffel</span><span>trufelffel</span><span>slaliliuuuush</span>
+                    <span>shoffel</span><span>slaliliuuuush</span><span>trufelffel</span>
+                    <span>shoffel</span><span>trufelffel</span><span>slaliliuuuush</span>
+                </div>
+                <div class="orange line">
+                    <span>shoffel</span><span>slaliliuuuush</span><span>trufelffel</span>
+                    <span>shoffel</span><span>trufelffel</span><span>slaliliuuuush</span>
+                    <span>shoffel</span><span>trufelffel</span><span>slaliliuuuush</span>
+                    <span>shoffel</span><span>slaliliuuuush</span><span>trufelffel</span>
+                    <span>shoffel</span><span>trufelffel</span><span>slaliliuuuush</span>
+                </div>
+                <div class="red line">
+                    <span>shoffel</span><span>trufelffel</span><span>slaliliuuuush</span>
+                    <span>shoffel</span><span>slaliliuuuush</span><span>trufelffel</span>
+                    <span>shoffel</span><span>trufelffel</span><span>slaliliuuuush</span>
+                </div>
+                <div class="gray line">
+                    <span>shoffel</span><span>trufelffel</span><span>slaliliuuuush</span>
+                    <span>shoffel</span><span>slaliliuuuush</span><span>trufelffel</span>
+                    <span>shoffel</span><span>trufelffel</span><span>slaliliuuuush</span>
+                    <span>shoffel</span><span>trufelffel</span><span>slaliliuuuush</span>
+                    <span>shoffel</span><span>slaliliuuuush</span><span>trufelffel</span>
+                    <span>shoffel</span><span>trufelffel</span><span>slaliliuuuush</span>
+                </div>
             </div>
         </div>
     </div>
