FrontEnd>some header changes and favicon

--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
     <script type="text/javascript" src="js/lib/jquery.highlighttextarea.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
 
+    <link rel="shortcut icon"    href="favicon.ico" type="image/x-icon">
+    <link rel="icon"             href="favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" href="favicon.png">
+
     <link type="text/css" rel="stylesheet" href="css/lib/jquery.highlighttextarea.css">
     <link type="text/css" rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="header_block">
+    <div class="header-block">
         <h1 class="header">
             <a href="/" title="rhymeline.net"><img src="images/logo.png" alt="" title="rhymeline.net"></a>
         </h1>
