--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width">
 
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.8.2.js"></script>
+    <script type="text/javascript" src="js/lib/jquery-fieldselection.min.js"></script>
     <script type="text/javascript" src="js/lib/jquery.highlighttextarea.js"></script>
+    <script type="text/javascript" src="js/redactor.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
 
     <link rel="shortcut icon"    href="favicon.ico" type="image/x-icon">
