--- a/index.html
+++ b/index.html
@@ -6,10 +6,6 @@
     <meta name="viewport" content="width=device-width">
 
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.8.2.js"></script>
-    <script type="text/javascript" src="js/lib/jquery-fieldselection.min.js"></script>
-    <script type="text/javascript" src="js/lib/jquery.highlighttextarea.js"></script>
-    <script type="text/javascript" src="js/redactor.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
 
     <link rel="shortcut icon"    href="favicon.ico" type="image/x-icon">
     <link rel="icon"             href="favicon.ico" type="image/x-icon">
@@ -129,5 +125,13 @@
             </div>
         </div>
     </div>
+
+<script type="text/javascript" src="js/lib/jquery-fieldselection.min.js"></script>
+<script type="text/javascript" src="js/lib/jquery.highlighttextarea.js"></script>
+<script type="text/javascript" src="js/redactor.js"></script>
+<script type="text/javascript" src="js/main.js"></script>
+
+<script type="text/javascript" src="js/lib/jquery.rdio.min.js"></script>
+<script type="text/javascript" src="js/rdio.js"></script>
 </body>
 </html>
