--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="spirales"></div>
                 <div class="editor-content">
                     <div class="content">
-                       <textarea id="notepad">
+                       <textarea id="notepad" style="padding-left: 97px; padding-top: 5px; width: 435px; height: 576px;">
                         Only God can judge me, is that right?
                         [synth voice] Only God can judge me now
                         Only God baby, nobody else, nobody else
