--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.8.2.js"></script>
 
-    <link rel="shortcut icon"    href="favicon.ico" type="image/x-icon">
-    <link rel="icon"             href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon"    href="favicon.png" type="image/x-icon">
     <link rel="apple-touch-icon" href="favicon.png">
 
     <link type="text/css" rel="stylesheet" href="css/lib/jquery.highlighttextarea.css">
