Add Rdio Radio image

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <link type="text/css" rel="stylesheet" href="css/lib/jquery.highlighttextarea.css">
     <link type="text/css" rel="stylesheet" href="css/style.css">
+    <link type="text/css" rel="stylesheet" href="css/rdio.css">
 </head>
 <body>
     <div class="header-block">
@@ -123,7 +124,10 @@
                 </div>
             </div>
         </div>
+        <div id="rdio"></div>
     </div>
+
+
 
 <script type="text/javascript" src="js/lib/jquery-fieldselection.min.js"></script>
 <script type="text/javascript" src="js/lib/jquery.highlighttextarea.js"></script>
