Complete Rdio UI

--- a/index.html
+++ b/index.html
@@ -124,7 +124,13 @@
                 </div>
             </div>
         </div>
-        <div id="rdio"></div>
+        <div id="rdio">
+            <div class="navigation prev"></div>
+            <div class="navigation pause"></div>
+            <div class="navigation play"></div>
+            <div class="navigation next"></div>
+            <div class="info">Play this track</div>
+        </div>
     </div>
 
 
