word selecting algortm inproovment

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                 <div class="editor-content">
                     <div class="content">
                        <textarea id="notepad" style="padding-left: 97px; padding-top: 5px; width: 435px; height: 576px;">
-                        Only God can judge me, is that right?
+RhymeLine
+                           Only God can judge me, is that right? lonly
                         [synth voice] Only God can judge me now
                         Only God baby, nobody else, nobody else
                         All you other motherfuckers get out my business
@@ -84,44 +85,9 @@
             </div>
         </div>
         <div class="right-block right">
-            <div class="sugestion-header"><span class="main-word">trufel</span>this is ouer sugestions</div>
+            <div class="sugestion-header"><span class="main-word">RhymeLine</span>this are our sugestions</div>
             <div class="sugestion">
-                <div class="green line">
-                    <span>shoffel</span><span>trufelffel</span><span>slaliliuuuush</span>
-                    <span>shoffel</span><span>slaliliuuuush</span><span>trufelffel</span>
-                    <span>shoffel</span><span>slaliliuuuush</span><span>trufelffel</span>
-                    <span>shoffel</span><span>trufelffel</span><span>slaliliuuuush</span>
-                    <span>shoffel</span><span>slaliliuuuush</span><span>trufelffel</span>
-                    <span>shoffel</span><span>trufelffel</span><span>slaliliuuuush</span>
-                    <span>shoffel</span><span>trufelffel</span><span>slaliliuuuush</span>
-                </div>
-                <div class="blue line">
-                    <span>shoffel</span><span>trufelffel</span><span>slaliliuuuush</span>
-                    <span>shoffel</span><span>slaliliuuuush</span><span>trufelffel</span>
-                    <span>shoffel</span><span>trufelffel</span><span>slaliliuuuush</span>
-                    <span>shoffel</span><span>slaliliuuuush</span><span>trufelffel</span>
-                    <span>shoffel</span><span>trufelffel</span><span>slaliliuuuush</span>
-                </div>
-                <div class="orange line">
-                    <span>shoffel</span><span>slaliliuuuush</span><span>trufelffel</span>
-                    <span>shoffel</span><span>trufelffel</span><span>slaliliuuuush</span>
-                    <span>shoffel</span><span>trufelffel</span><span>slaliliuuuush</span>
-                    <span>shoffel</span><span>slaliliuuuush</span><span>trufelffel</span>
-                    <span>shoffel</span><span>trufelffel</span><span>slaliliuuuush</span>
-                </div>
-                <div class="red line">
-                    <span>shoffel</span><span>trufelffel</span><span>slaliliuuuush</span>
-                    <span>shoffel</span><span>slaliliuuuush</span><span>trufelffel</span>
-                    <span>shoffel</span><span>trufelffel</span><span>slaliliuuuush</span>
-                </div>
-                <div class="gray line">
-                    <span>shoffel</span><span>trufelffel</span><span>slaliliuuuush</span>
-                    <span>shoffel</span><span>slaliliuuuush</span><span>trufelffel</span>
-                    <span>shoffel</span><span>trufelffel</span><span>slaliliuuuush</span>
-                    <span>shoffel</span><span>trufelffel</span><span>slaliliuuuush</span>
-                    <span>shoffel</span><span>slaliliuuuush</span><span>trufelffel</span>
-                    <span>shoffel</span><span>trufelffel</span><span>slaliliuuuush</span>
-                </div>
+
             </div>
         </div>
         <div id="rdio">
