--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
         </div>
         <div class="right-block right">
-            <div class="sugestion-header"><span class="main-word"></span></div> 
+            <div class="sugestion-header"><span class="main-word">RhymeLine</span></div>
             <div class="sugestion">
             </div>
         </div>
